assets/css/styles.css
body { 
    padding-top: 90px;
    font-size: 16px;
    color: black;
    font-family: 'Roboto', sans-serif;
}

/** Header **/
nav {
    background: linear-gradient(to bottom, #ffff66 0%, #ffcc99 100%);
    height: 140px; 
}

.navbar-brand {
    padding-top: 25px;
    padding-bottom: 25px;
    padding-left: 25px;
} 

.navbar-nav { 
    margin-left: auto;  
    padding-top: 45px; 
 } 

 .navbar-brand h1 {
   padding-top: 35px;
   padding-left: 30px;  
}
nav li {
    display: inline-block;
    height: 100%;
    padding-right: 40px;
    font-family: 'RocknRoll One', sans-serif;
}

.custom-toggler.navbar-toggler { 
    border-color: transparent; 
    box-shadow: none;
    padding-top: 40px;
} 
        
.custom-toggler .navbar-toggler-icon { 
    background-image: url( 
 "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); 
} 

.navbar-collapse {
   padding-left: 25px;
   padding-top: 0px; 
}

.navbar-toggler.collapsed .close-icon {
    display: none;
   }

.navbar-toggler:not(.collapsed) .navbar-toggler-icon {
    display: inline;
   }

.close-icon {
    color: black; 
}
/** End of header **/

/** Footer **/

.footer { 
    color: black;
    background-color: #ffff66;
    width: 100%;
    position: absolute;
    font-family: 'RocknRoll One', sans-serif;
}

.fa:hover {
    opacity: 0.7;
    color: black;
}

.fa-facebook {
  background: #3B5998;
  color: white;
}

.fa-twitter {
  background: #55ACEE;
  color: white;
}

.fa-instagram {
  background: #125688;
  color: white;
}

footer p u:hover {
    opacity: 0.7;
    color: black;
}
/** End of footer **/

/** Your picks page **/
.responsive {
  width: 100%;
  height: auto;
}
.category-tile { 
  position: relative;
  margin-bottom: 100px; 
}
/** End of Your picks page **/

/** Large devices only **/
@media (min-width: 1200px) {

/** Header **/
.navbar-brand h1{
    font-family: 'RocknRoll One', sans-serif;
    color: black;
    font-size: 1.5em;
    font-weight: bold;
    margin-top: 0;
    margin-bottom: 0;
    line-height: .75;
}
.active a:hover {
    border-bottom: 1px solid black;
}
.active {
  border-bottom: 1px solid black;
}

/** Footer **/

#subscribe {
    padding: 80px; 
    font-size: 16px;
    text-align: center;
    display: inline-block;
    height: 100%;
}
#social-media { 
    padding: 60px; 
    text-align: center;
    display: inline-block;
    height: 100%;
}
.fa {
  padding: 20px;  
  font-size: 30px;
  width: 70px;
  text-align: center;
  text-decoration: none;
  margin: 5px 5px;
  border-radius: 50%;
}

/** Your picks page **/
#your-picks-title {
    padding: 60px;
    margin-top: 60px;
    font-size: 30px; 
}
.category-tile {
    padding-left: 60px;
}
.category-tile img {
    width: 200px;
    height: 280px; 
}
.category-tile span {
  position: absolute;
  display: block; 
  margin-top: 20px; 
  text-align: center;
  font-size: 16px;
  background-color: #87cefa;
  color: black;
  opacity: .8;
}
}

/** Medium devices only **/
@media (min-width: 992px) and (max-width: 1199px) {

/** Header **/
.navbar-brand h1{
    font-family: 'RocknRoll One', sans-serif;
    color: black;
    font-size: 1.5em;
    font-weight: bold;
    margin-top: 0;
    margin-bottom: 0;
    line-height: .75;
}
.active a:hover {
    border-bottom: 1px solid black;
}
.active {
  border-bottom: 1px solid black;
}

/** Footer **/
#subscribe {
    padding:80px; 
    font-size: 16px;
    text-align: center;
    display: inline-block;
    height: 100%;
}
#social-media { 
    padding: 60px; 
    text-align: center;
    display: inline-block;
    height: 100%;
}
.fa {
  padding: 20px;  
  font-size: 30px;
  width: 70px;
  text-align: center;
  text-decoration: none;
  margin: 5px 5px;
  border-radius: 50%;
}

/** Your picks page **/
#your-picks-title {
    padding: 60px;
    margin-top: 60px;
    font-size: 30px; 
}
.category-tile img {
    width: 160px;
    height: 240px; 
}
.category-tile span {
  position: absolute;
  display: block; 
  margin-top: 20px; 
  text-align: center;
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  background-color: #87cefa;
  color: black;
  opacity: .8;
}
}

/** Small devices only **/
@media (min-width: 768px) and (max-width: 991px) {

/** Header **/
nav li {
    display: inline-block;
    height: 100%;
    padding-left: 25px; 
}

/** Footer **/
#subscribe {
    padding:70px; 
    font-size: 13px;
    text-align: center;
    display: inline-block;
    height: 100%;
}
#social-media { 
    padding: 50px; 
    text-align: center;
    display: inline-block;
    height: 100%;
}
.fa {
  padding: 15px;  
  font-size: 20px;
  width: 50px;
  text-align: center;
  text-decoration: none;
  margin: 5px 5px;
  border-radius: 50%;
}

/** Your picks page **/
#your-picks-title {
    padding: 60px;
    margin-top: 60px;
    font-size: 30px; 
}
.category-tile img {
    width: 140px;
    height: 200px; 
}
.category-tile span {
  position: absolute;
  display: block; 
  margin-top: 20px; 
  text-align: center;
  font-size: 16px;
  background-color: #87cefa;
  color: black;
  opacity: .8;
}
}

/** Extra small devices only **/
@media (max-width: 767px) {

/** Header **/
.navbar-brand h1{
    font-family: 'RocknRoll One', sans-serif;
    color: black;
    font-size: 25px;
    font-weight: bold;
    margin-top: 0;
    margin-bottom: 0;
}
.navbar-brand h1 {
   padding-top: 35px;
   padding-left: 20px;  
}
nav li {
    display: inline-block;
    height: 100%;
    padding-left: 30px; 
}  

/** Footer **/
#subscribe {
    padding: 20px; 
    font-size: 13px;
    text-align: center;
    display: inline-block;
    height: 100%;
}
#social-media { 
    padding: 20px; 
    text-align: center;
    display: inline-block;
    height: 100%;
}
.fa {
  padding: 15px;  
  font-size: 20px;
  width: 50px;
  text-align: center;
  text-decoration: none;
  margin: 5px 5px;
  border-radius: 50%;
}

/** Your picks page **/
#your-picks-title {
    padding: 60px;
    margin-top: 40px;
    font-size: 20px; 
}
.category-tile img {
    width: 140px;
    height: 200px; 
    margin-left: 20px; 
}
.category-tile span {
  position: absolute;
  display: block; 
  margin-top: 20px; 
  margin-left: 20px;
  text-align: center;
  font-size: 16px;
  background-color: #87cefa;
  color: black;
  opacity: .8;
}
}

